html image overflow fix

--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@ html, body {
     background-color: rgb(70, 70, 70);
     color:white;
     height:100%;
+    display: flex;
+    flex-direction:column;
 }
+/* body {
+    display: flex;
+    flex-direction:column;
+} */
 
 img {
     max-width: 100%;
